#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib
lib_LTLIBRARIES = libdatos.la

#######################################
# Build information for each library

# Sources for funciones
libdatos_la_SOURCES = datos.c

# Linker options funcionesProgram
#libdatos_la_LDFLAGS = 

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libdatos_la_CPPFLAGS = -I$(top_srcdir)/src/include

