# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS =  callbacks.h clientes.h drivers_post.h drivers_pre.h insumos.h menu.h orden_pedido_producto.h orden_pedido_proveedor.h orden_produccion.h persistencia.h principal.h producto_terminado.h proveedores.h RMPS.h tecnicos.h utils.h archivos.h calendario.h consultas.h datos.h dialogos.h listados.h formularios.h templates.h 
